fix(branch-io): move modal from behind the banch banner

--- a/express/blocks/branch-io/branch-io.css
+++ b/express/blocks/branch-io/branch-io.css
@@ -1,3 +1,8 @@
 .branch-io {
   display: none;
 }
+
+body.branch-banner-is-active .doMoreBanner,
+body.branch-banner-is-active .doMoreModal { 
+  bottom: 76px; 
+}
